[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "cython>=3.0",
    "numpy>=1.19"
]
build-backend = "setuptools.build_meta"

[project]
name = "phasepy"
version = "0.0.56"
description = "Multiphase multicomponent Equilibria"
readme = "long_description.rst"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Gustavo Chaparro", email = "gchaparro@ethz.ch" },
    { name = "Andres Mejia Matallana" }
]
keywords = [
    "Phase Equilibrium", "Cubic EOS", "QMR", "MHV", "WS", "NRTL",
    "Wilson", "UNIFAC", "UNIQUAC", "Flash", "VLE", "LLE", "VLLE", "SGT"
]
dependencies = [
    "numpy>=1.19",
    "scipy>=1.5.0",
    "pandas>=1.0.0",
    "openpyxl>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/gustavochm/phasepy"
Download = "https://github.com/gustavochm/phasepy.git"

[project.optional-dependencies]
dev = [
    "cython>=3.0",
    "pytest>=6.0",
    "build"
]

[tool.setuptools.packages.find]
include = ["phasepy*"]

[tool.setuptools.package-data]
phasepy = ["database/*"]

[tool.cibuildwheel]
build-verbosity = 1
test-skip = "*"  # Skip cibuildwheel tests, we'll test in the workflow